--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -332,7 +332,7 @@ a:link
 }
 .trait
 {
-    border: 1px solid black;
+    border: 1px solid #00000030;
     width: 30%;
     margin: auto;
 }
@@ -421,6 +421,13 @@ a:link
     }
 }
 @media screen and (max-width: 769px) {
+    .titreblocressource 
+    {
+        text-align: center;
+        font-size: 120%;
+        margin-top: 15%;
+        font-family: "Poiret One", cursive;
+    }
     .ressource
     {
         display: flex;
@@ -576,83 +583,6 @@ a:link
         margin-top: 10%;
     }
 }
-
-
-/*--------FOOTER---------*/
-.allfooter
-{
-  background-color: #eaac46;
-  width: 100%;
-}
-.logoreseau
-{
-  display: flex;
-  justify-content: space-evenly;
-  font-size: 350%;
-  padding: 1% 1% 1% 1%;
-  margin: 0% 20%;
-}
-.logofb 
-{
-    margin: 0% 1% 0% 1%;
-}
-.logofb i
-{
-    color: #ffffff;
-    margin: 0% 1% 0% 1%;
-    transition: all 350ms;
-}
-.logofb :hover
-{
-    color: #4495ff;
-    transform: scale(1.3);
-}
-.logomail
-{
-    margin: 0% 1% 0% 1%;
-}
-.logomail i
-{
-    color: #ffffff;
-    margin: 0% 1% 0% 1%;
-    transition: all 350ms;
-}
-.logomail :hover
-{
-    transform: scale(1.3);
-    color: #3379d4;
-}
-.mentions
-{
-  font-family: 'Cutive Mono', monospace;
-  margin-right: 2%;
-  color: #f0edde;
-}
-.copyright
-{
-  display: flex;
-  justify-content: center;
-  font-size: 70%;
-  color: #000000;
-  position: relative;
-}
-.copy
-{
-  margin-right: 0.5%;
-  font-family: 'Cutive Mono', monospace;
-  margin-bottom: 1%;
-}
-.date
-{
-  margin-left: 1%;
-  font-family: 'Cutive Mono', monospace;
-}
-.textcopy
-{
-  margin-left: 2%;
-  font-family: 'Cutive Mono', monospace;
-}
-
 .article
 {
     position: absolute;
@@ -812,6 +742,44 @@ a:link
     text-align: center;
 }
 }
+@media screen and (max-width: 768px){
+.test
+{
+    position: absolute;
+    width: 60%;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 7%;
+    text-align: center;
+}
+.test1
+{
+    position: absolute;
+    width: 60%;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 9%;
+    text-align: center;
+}
+.test2
+{
+    position: absolute;
+    width: 60%;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 9%;
+    text-align: center;
+}
+.test3
+{
+    position: absolute;
+    width: 60%;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 3%;
+    text-align: center;
+}
+}
 @media screen and (max-width: 500px){
 .test
 {
@@ -850,8 +818,6 @@ a:link
     text-align: center;
 }
 }
-
-
 .fadeIn {
     -webkit-animation-name: fadeIn;
     animation-name: fadeIn;
@@ -960,3 +926,127 @@ a:link
     90% {opacity: 0;}
     100% {opacity: 0;}
     }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*--------FOOTER---------*/
+.footerstyle
+{
+    border: 7px solid #eaab4685;
+    width: 100%;
+}
+.allfooter
+{
+  background-color: #eaac46;
+  width: 100%;
+}
+.logoreseau
+{
+  display: flex;
+  justify-content: space-evenly;
+  font-size: 350%;
+  margin: 0% 20%;
+}
+.logofb 
+{
+    margin: 0% 1% 0% 1%;
+}
+.logofb i
+{
+    color: #ffffff;
+    margin: 0% 1% 0% 1%;
+    transition: all 350ms;
+}
+.logofb :hover
+{
+    color: #4495ff;
+    transform: scale(1.3);
+}
+.logophone 
+{
+    margin: 0% 1% 0% 1%;
+}
+.logophone i
+{
+    color: #ffffff;
+    margin: 0% 1% 0% 1%;
+    transition: all 350ms;
+}
+.logophone :hover
+{
+    color: #00a50e;
+    transform: scale(1.3);
+}
+.logomessenger 
+{
+    margin: 0% 1% 0% 1%;
+}
+.logomessenger i
+{
+    color: #ffffff;
+    margin: 0% 1% 0% 1%;
+    transition: all 350ms;
+}
+.logomessenger :hover
+{
+    color: #4495ff;
+    transform: scale(1.3);
+}
+.logomail
+{
+    margin: 0% 1% 0% 1%;
+}
+.logomail i
+{
+    color: #ffffff;
+    margin: 0% 1% 0% 1%;
+    transition: all 350ms;
+}
+.logomail :hover
+{
+    transform: scale(1.3);
+    color: #3379d4;
+}
+.mentions
+{
+  font-family: 'Cutive Mono', monospace;
+  margin-right: 2%;
+  color: #f0edde;
+}
+.copyright
+{
+  display: flex;
+  justify-content: center;
+  font-size: 70%;
+  color: #ffffff;
+  position: relative;
+}
+@media screen and (max-width: 500px){
+.logoreseau {
+    display: flex;
+    justify-content: space-evenly;
+    font-size: 200%;
+    padding: 1%;
+    margin: 0% 20%;
+}
+}
